--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main class="main">
     <canvas width="275" height="400" id="canvas"></canvas>
   </main>
-  <script type="module" src="/js/main.js"></script>
+  <script  src="js/main.js" type="module" ></script>
 </body>
 
 </html>
